--- a/Core/ResourceDictionary.xaml
+++ b/Core/ResourceDictionary.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:core="clr-namespace:Core">
 
-    <!--<DataTemplate DataType="{x:Type local:ViewModel}" />-->
+    <!--<DataTemplate DataType="{x:Type core:ViewModel}" />-->
     <DataTemplate DataType="{x:Type core:ViewModel}" x:Key="{x:Static core:ResourceKeys.AKey}" />
 
     <DataTemplate x:Key="{x:Static core:ResourceKeys.TheOtherKey}" />
